# field_names_and_count

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
field_names_and_counts/: Cargo.toml
field_names_and_counts/examples/: generics.rs  hello_world.rs  variants.rs
field_names_and_counts/src/: lib.rs
field_names_and_counts/tests/: fields.rs  keep_in_sync.rs  variants.rs
field_names_and_counts_derive/: Cargo.toml
field_names_and_counts_derive/src/: fields.rs  lib.rs  variants.rs
