[package]
name = "field_names_and_counts"
version = "0.1.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>", "Contributors"]
edition = "2024"
description = """
A trait and derive macro to get field names and counts for structs.
"""
license = "MIT"
readme = "README.md"
exclude = ["/.github/**"]


[dependencies]
darling = "0.13.1"
proc-macro2 = "1"
quote = "1.0.14"
syn = { version = "1.0.84", features = ["full"] }

[dev-dependencies]
test-case = "3.3.1"
proptest = "1.9.0"
pretty_assertions = "1.4.1"


[lib]
proc-macro = true
